base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
